--- a/packages/net/package.json
+++ b/packages/net/package.json
@@ -4,7 +4,9 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "build": "yarn webpack"
+        "jest": "jest",
+        "test": "jest src --watch --color",
+        "build": "tsc"
     },
     "dependencies": {
         "rxjs": "^7.0.0-beta.4",
@@ -12,6 +14,9 @@
     },
     "devDependencies": {
         "@types/node": "^14.0.27",
-        "@types/ws": "^7.2.6"
+        "@types/ws": "^7.2.6",
+        "jest": "^26.4.0",
+        "ts-jest": "^26.2.0",
+        "typescript": "rc"
     }
 }
