--- a/packages/net/tsconfig.json
+++ b/packages/net/tsconfig.json
@@ -1,7 +1,9 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "lib": ["es2017", "esnext"]
+        "outDir": "dist",
+        "module": "CommonJS",
+        "lib": ["esnext"]
     },
     "exclude": ["src/**/*.test.ts"]
 }
