--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages/net"
   ],
   "devDependencies": {
+    "@types/jest": "^26.0.10",
     "eslint": "^7.7.0",
     "prettier": "^2.0.5",
     "typescript": "rc"
