--- a/packages/net/package.json
+++ b/packages/net/package.json
@@ -13,6 +13,7 @@
         "ws": "^7.3.1"
     },
     "devDependencies": {
+        "@types/jest": "^26.0.10",
         "@types/node": "^14.0.27",
         "@types/ws": "^7.2.6",
         "jest": "^26.4.0",
