--- a/packages/net/tsconfig.json
+++ b/packages/net/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "dist",
+        "declaration": true,
         "module": "CommonJS",
         "lib": ["esnext"]
     },
