--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "declaration": true,
-        "module": "ESNext",
+        "module": "CommonJS",
         "lib": ["esnext"]
     },
     "exclude": ["src/**/*.test.ts"]
