--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,16 +2,18 @@
     "name": "server",
     "version": "0.0.1",
     "main": "dist/index.js",
+    "type": "commonjs",
     "license": "MIT",
     "scripts": {
         "jest": "jest",
         "test": "jest src --watch",
         "clear": "rimraf dist",
-        "build": "yarn clear && yarn tsc --outDir dist"
+        "build": "yarn clear && yarn webpack --mode=production",
+        "start": "yarn node dist/index.js"
     },
     "dependencies": {
-        "net": "workspace:packages/net",
         "rxjs": "^7.0.0-beta.4",
+        "sim-net": "workspace:packages/sim-net",
         "ws": "^7.3.1"
     },
     "devDependencies": {
@@ -19,8 +21,12 @@
         "@types/node": "^14.0.27",
         "@types/ws": "^7.2.6",
         "jest": "^26.4.0",
+        "pnp-webpack-plugin": "^1.6.4",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.2.0",
-        "typescript": "rc"
+        "ts-loader": "^8.0.2",
+        "typescript": "rc",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12"
     }
 }
