--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,8 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "declaration": true,
-        "module": "CommonJS",
-        "lib": ["esnext"]
+        "lib": ["ESNext"]
     },
     "exclude": ["src/**/*.test.ts"]
 }
