--- a/packages/sim-net/package.json
+++ b/packages/sim-net/package.json
@@ -20,6 +20,6 @@
         "jest": "^26.4.0",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.2.0",
-        "typescript": "rc"
+        "typescript": "^4.0.2"
     }
 }
