--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,7 +26,7 @@
         "rimraf": "^3.0.2",
         "ts-jest": "^26.2.0",
         "ts-loader": "^8.0.2",
-        "typescript": "rc",
+        "typescript": "^4.0.2",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12"
     }
