--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "scripts": {
     "client:build": "yarn workspace client build",
     "client:start": "yarn workspace client start",
-    "install:all": "yarn workspaces foreach install",
+    "install:all": "yarn install && yarn workspaces foreach install",
     "server:build": "yarn workspace server build",
     "server:start": "yarn workspace server start",
+    "server:start:dev": "yarn workspace server start:dev",
     "sim-net:build": "yarn workspace sim-net build",
+    "sim-net:test": "yarn workspace sim-net test",
     "sim:build": "wasm-pack build packages/sim"
   },
   "devDependencies": {
