--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,8 @@
         "clear": "rimraf dist",
         "build:webpack": "yarn clear && yarn webpack --mode=production",
         "build": "yarn clear && yarn tsc --outDir dist",
-        "start": "yarn node dist/index.js"
+        "start": "yarn node dist/index.js",
+        "start:dev": "yarn concurrently \"tsc -w --outDir dist\" \"nodemon dist/index.js\""
     },
     "dependencies": {
         "rxjs": "^7.0.0-beta.4",
@@ -21,7 +22,9 @@
         "@types/jest": "^26.0.10",
         "@types/node": "^14.0.27",
         "@types/ws": "^7.2.6",
+        "concurrently": "^5.3.0",
         "jest": "^26.4.0",
+        "nodemon": "^2.0.4",
         "pnp-webpack-plugin": "^1.6.4",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.2.0",
