--- a/packages/sim-net/package.json
+++ b/packages/sim-net/package.json
@@ -2,6 +2,7 @@
     "name": "sim-net",
     "version": "0.0.1",
     "main": "lib/index.js",
+    "type": "commonjs",
     "license": "MIT",
     "scripts": {
         "jest": "jest",
