--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,12 +14,14 @@
         "start:dev": "yarn concurrently \"tsc -w --outDir dist\" \"nodemon dist/index.js\""
     },
     "dependencies": {
+        "minimist": "^1.2.5",
         "rxjs": "^7.0.0-beta.4",
         "sim-net": "workspace:packages/sim-net",
         "ws": "^7.3.1"
     },
     "devDependencies": {
         "@types/jest": "^26.0.10",
+        "@types/minimist": "1.2.0",
         "@types/node": "^14.0.27",
         "@types/ws": "^7.2.6",
         "concurrently": "^5.3.0",
